--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,5 @@ services:
       - 3000:3000
       - 9229:9229
     volumes:
-      - ./:/app
-      - '/app/node_modules'
+      - ./:/site/app
+      - /site/app/node_modules
